--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "animate.css": "^4.1.1",
     "classnames": "^2.5.1",
@@ -23,10 +24,12 @@
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-on-screen": "^2.1.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.27.0",
     "react-router-hash-link": "^2.4.3",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "themify-icons": "^1.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
