--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "animate.css": "^4.1.1",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
+    "dotenv": "^16.4.5",
     "firebase": "^10.14.1",
     "framer-motion": "^11.11.11",
     "lucide-react": "^0.454.0",
